<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.daumantas.klaipeda.PajurisEdit">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/pajuris_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="5"
            android:orientation="vertical" >


            <TextView
                android:id="@+id/textView2"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/oras" />

            <EditText
                android:id="@+id/oras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/text_box"
                android:padding="3dp"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView3"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vanduo" />

            <EditText
                android:id="@+id/vanduo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:padding="3dp"
                android:layout_margin="15dp"
                android:background="@drawable/text_box"
                android:hint="@string/vanduo"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView4"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vejas" />

            <EditText
                android:id="@+id/vejas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:background="@drawable/text_box"
                android:layout_margin="15dp"
                android:padding="3dp"
                android:hint="@string/vejas"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView5"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/banguotumas" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/sbang1"
                    android:layout_margin="5dp"
                    android:background="@color/grey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/sbang2"
                    android:layout_margin="5dp"
                    android:background="@color/grey"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/sbang3"
                    android:layout_margin="5dp"
                    android:background="@color/grey"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/sbang4"
                    android:layout_margin="5dp"
                    android:background="@color/grey"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/sbang5"
                    android:layout_margin="5dp"
                    android:background="@color/grey"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zydejimas" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/szyd1"
                    android:layout_margin="5dp"
                    android:background="@color/grey"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/szyd2"
                    android:layout_margin="5dp"
                    android:background="@color/grey"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/szyd3"
                    android:layout_margin="5dp"
                    android:background="@color/grey"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/szyd4"
                    android:layout_margin="5dp"
                    android:background="@color/grey"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/szyd5"
                    android:layout_margin="5dp"
                    android:background="@color/grey"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/darbo_laikas" />

            <EditText
                android:id="@+id/darbo_laikas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_box"
                android:ems="10"
                android:padding="3dp"
                android:layout_margin="15dp"
                android:hint="@string/darbo_laikas"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView8"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pramogos" />

            <EditText
                android:id="@+id/pramogos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_box"
                android:ems="10"
                android:layout_margin="15dp"
                android:padding="3dp"
                android:hint="@string/pramogos"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView9"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/debesuotumas" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/sdeb1"
                    android:layout_margin="5dp"
                    android:background="@color/grey"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/sdeb2"
                    android:layout_margin="5dp"
                    android:background="@color/grey"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/sdeb3"
                    android:layout_margin="5dp"
                    android:background="@color/grey"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/sdeb4"
                    android:layout_margin="5dp"
                    android:background="@color/grey"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/sdeb5"
                    android:layout_margin="5dp"
                    android:background="@color/grey"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView10"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telefonas" />

            <EditText
                android:id="@+id/telefonas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:background="@drawable/text_box"
                android:layout_margin="15dp"
                android:padding="3dp"
                android:inputType="phone"
                android:hint="@string/telefonas" />

            <TextView
                android:id="@+id/textView11"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_box"
                android:ems="10"
                android:layout_margin="15dp"
                android:padding="3dp"
                android:inputType="textEmailAddress"
                android:hint="@string/email" />

            <Button
                android:id="@+id/addLoc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pazymeti_zem" />

            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/issaugoti" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
